# neural-geometry

./: .gitmodules  README.md  main.py  pyproject.toml
exploration/: nn1.py  nn1_geometry.py  nn1data.py  nn2.py  nn2_binary.py  nn3.py  np1.py  np2.py  np3.py  np4.py  np5.py  numb1.py  pltr1.py  pltr2.py  speed.py  timed.py
neural_geometry/: bayesian.py  gl1_geometry.py  gl2_binary.py  gl_bayesian.py  gl_regions.py  gl_relu.py  gl_train.py  nn1_geometry.py  nn2_binary.py  relu.py  relu_train.py  speed.py
neural_geometry/shaders/: points_frag.txt  points_vert.txt  regions_frag.txt  regions_vert.txt
