[project]
name = "neural-geometry"
version = "0.1.0"
description = "Exploring the geometry of piecewise-linear regions in ReLU networks"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "numba>=0.64.0",
    "numpy>=2.4.3",
    "scipy>=1.17.1",
    "typer>=0.24.1",
]
